--- a/src/mod_rating_by_type/locale/fr/LC_MESSAGES/django.po
+++ b/src/mod_rating_by_type/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-31 17:41+0200\n"
+"POT-Creation-Date: 2021-06-19 10:47+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -846,12 +846,9 @@ msgstr "Points de bombardier"
 #: .\mod_rating_by_type\templates\pilot_sorties.html:110
 #: .\mod_rating_by_type\templates\pilot_vlifes.html:109
 #: .\mod_rating_by_type\templates\pilots.html:137
-#, fuzzy
-#| msgctxt "coalition"
-#| msgid "Allies"
 msgctxt "persona"
 msgid "All"
-msgstr "Alliés"
+msgstr "Toute"
 
 #: .\mod_rating_by_type\templates\ironman_pilots.html:148
 #: .\mod_rating_by_type\templates\pilot.html:90
@@ -1016,12 +1013,9 @@ msgid "Flight time (hours)"
 msgstr "Temps de vol (heures)"
 
 #: .\mod_rating_by_type\templates\main.html:119
-#, fuzzy
-#| msgctxt "tour_top"
-#| msgid "Best pilots in the last 24 hours"
 msgctxt "tour_top"
 msgid "Best pilots in the last mission"
-msgstr "Meilleurs pilotes des dernières 24H"
+msgstr "Meilleurs pilotes lors de la dernière mission"
 
 #: .\mod_rating_by_type\templates\main.html:121
 msgctxt "tour_top"
@@ -1081,12 +1075,9 @@ msgid "Best live pilots"
 msgstr "Meilleurs pilotes en vie"
 
 #: .\mod_rating_by_type\templates\main.html:177
-#, fuzzy
-#| msgctxt "tour_top"
-#| msgid "Best fighter pilots in the last 24 hours"
 msgctxt "tour_top"
 msgid "Best fighter pilots in the last mission"
-msgstr "Meilleurs pilotes de chasse dans les dernières 24 heures"
+msgstr "Meilleurs pilotes de chasse lors de la dernière mission"
 
 #: .\mod_rating_by_type\templates\main.html:179
 msgctxt "tour_top"
@@ -1099,12 +1090,9 @@ msgid "Best live fighter pilots"
 msgstr "Meilleurs pilotes de chasse en vie"
 
 #: .\mod_rating_by_type\templates\main.html:235
-#, fuzzy
-#| msgctxt "tour_top"
-#| msgid "Best attacker pilots in the last 24 hours"
 msgctxt "tour_top"
 msgid "Best attacker pilots in the last mission"
-msgstr "Meilleurs pilotes d’attaque au sol dans les dernières 24 heures"
+msgstr "Meilleurs pilotes d’avions d’attaque au sol lors de la dernière mission"
 
 #: .\mod_rating_by_type\templates\main.html:237
 msgctxt "tour_top"
@@ -1117,12 +1105,9 @@ msgid "Best live attacker pilots"
 msgstr "Meilleurs pilotes d’attaque au sol en vie"
 
 #: .\mod_rating_by_type\templates\main.html:293
-#, fuzzy
-#| msgctxt "tour_top"
-#| msgid "Best bomber pilots in the last 24 hours"
 msgctxt "tour_top"
 msgid "Best bomber pilots in the last mission"
-msgstr "Meilleurs pilotes de bombardiers dans les dernières 24 heures"
+msgstr "Meilleurs pilotes de bombardier lors de la dernière mission"
 
 #: .\mod_rating_by_type\templates\main.html:295
 msgctxt "tour_top"
@@ -1317,12 +1302,9 @@ msgid "Best fighter pilots"
 msgstr "Meilleurs pilotes de chasse"
 
 #: .\mod_rating_by_type\templates\overall.html:250
-#, fuzzy
-#| msgctxt "tour_top"
-#| msgid "Best fighter streak"
 msgctxt "overall"
 msgid "Best fighter air kill streak"
-msgstr "Meilleure série de chasseur"
+msgstr "Meilleure série de victoires en chasseur"
 
 #: .\mod_rating_by_type\templates\overall.html:276
 #: .\mod_rating_by_type\templates\tour.html:222
@@ -1331,12 +1313,9 @@ msgid "Best attacker pilots"
 msgstr "Meilleurs pilotes d’attaque au sol"
 
 #: .\mod_rating_by_type\templates\overall.html:302
-#, fuzzy
-#| msgctxt "tour_top"
-#| msgid "Best attacker streak"
 msgctxt "overall"
 msgid "Best attacker ground streak"
-msgstr "Meilleure série d’attaque au sol"
+msgstr "Meilleure série de victoires en avion d’attaque au sol"
 
 #: .\mod_rating_by_type\templates\overall.html:328
 #: .\mod_rating_by_type\templates\tour.html:274
@@ -1345,12 +1324,9 @@ msgid "Best bomber pilots"
 msgstr "Meilleurs pilotes de bombardiers"
 
 #: .\mod_rating_by_type\templates\overall.html:354
-#, fuzzy
-#| msgctxt "tour_top"
-#| msgid "Best bomber streak"
 msgctxt "overall"
 msgid "Best bomber ground streak"
-msgstr "Meilleure série d’attaque au sol"
+msgstr "Meilleure série de victoires en bombardier"
 
 #: .\mod_rating_by_type\templates\overall.html:381
 msgid ""
@@ -2410,12 +2386,12 @@ msgctxt "sortie_page_title"
 msgid "Sortie Log"
 msgstr "Log de la sortie"
 
-#: .\mod_rating_by_type\templates\pilot_sortie_log.html:98
+#: .\mod_rating_by_type\templates\pilot_sortie_log.html:95
 msgctxt "sortie_log"
 msgid "AI"
 msgstr "AI"
 
-#: .\mod_rating_by_type\templates\pilot_sortie_log.html:109
+#: .\mod_rating_by_type\templates\pilot_sortie_log.html:106
 msgid ""
 "Ammo types are not attached to damage logs in the log files. \"Ammo hit\" "
 "logs are attached via processing to damage logs using an educated guess, so "
