--- a/changelog.txt
+++ b/changelog.txt
@@ -114,3 +114,7 @@ Version 1.5.4
 - Add missing bug fix from 1.2.53 which now shows total player tanks a pilot destroyed on pilot/squad/virtual life pages.
 - Update to 1.2.54 of IL2 Stats.
 - Update to latest tank mod version.
+
+Version 1.6.0
+
+- Update to 2.2.0 of enhancements, 1.3.0 of global aircraft stats.
