--- a/changelog.txt
+++ b/changelog.txt
@@ -79,3 +79,7 @@ Version 2.2.0
 - New module "Top Last Mission", which replaces top of last 24 hours with top player in the last mission. Mainly meant for event servers where the action doesn't happen 24/7.
 - New module "Rearm Accuracy Workaround", which stops sorties where a player took off twice (and thus presumambly rearmed) from being counted towards player accuracy. The total nr shots fired is reset when you rearm in the logs, and there is no way to recover how many shots you fired before the rearm. This is a workaround whichs bandaids the problem.
 - New module "Bailout Accuracy Workaround", which stops sorties where a player bailed out from being counted towards player accuracy. The number of shots is set to the max possible (= how many shots you started with) in sorties where you bailout, and again it is a bug in the game logs, and as such impossible to count the number of shots. This is a workaround whichs bandaids the problem.
+
+Version 2.2.1
+
+- Fix bug where damaged sortie logs without attached hits were causing a 500 error in pilot sortie logs.
