--- a/changelog.txt
+++ b/changelog.txt
@@ -125,9 +125,6 @@ Version 1.6.1
 
 Version 1.6.2
 - Fix bug where damaged sortie logs without attached hits were causing a 500 error in pilot sortie logs.
-- Update to 2.2.1 of enhancements.
-
-Version 2.2.1
-
-- Fix bug where damage/ammo hits were being garbled in tankman sortie logs. 
+- Fix bug where links to pilot in "Best Live Fighter/Attacker/Bomber" were missing on main page.
+- Fix bug where you couldn't return to main profile if you went to another tab, link on tab was missing.
 - Update to 2.2.1 of enhancements.
