--- a/changelog.txt
+++ b/changelog.txt
@@ -99,3 +99,7 @@ Version 2.2.4
 Version 2.3.0
 
 - New module "Mission Win New Tour", which starts new a new tour every time a mission is won.
+
+Version 2.3.1
+
+- Update to 1.2.57 of IL2 Stats.
