Check if attacker is not None before calling sorties.
There is a rare occurence in the logs where a bullet/shell EventHit happens,
but no attacker is present. Perhaps a plane shot then disconnected before
the hits registered?

--- a/changelog.txt
+++ b/changelog.txt
@@ -103,3 +103,7 @@ Version 2.3.0
 Version 2.3.1
 
 - Update to 1.2.57 of IL2 Stats.
+
+Version 2.3.2
+
+- Module Ammo breakdown: Fix rare bug where stats parser would crash if there was a hit registered in the DServer logs with a bullet/shell projectile that did not have an attacker.
