--- a/changelog.txt
+++ b/changelog.txt
@@ -115,5 +115,6 @@ Version 2.3.3
 Version 2.4.0
 
 - New module "Air streaks no AI", makes air streaks not count ai kills.
+- New module "Gunnery stats", which includes a new table "Gunner Rankings" which works like "Pilot rankings", but for gunners of an aircraft.
 - Module Ammo Breakdown: The breakdowns now also work for bombs/rockets. This is useful for attacker/bomber planes, and also works for tanks (bombs/rockets taken).
 - Fix bug where sorties were being counted twice for specialized VLives (fighter/attacker/bomber vlives). Happened only if mission was declared to be "won by score".
